--- a/build.properties
+++ b/build.properties
@@ -1,1 +1,6 @@
-bin.includes = META-INF/
+source.. = src/
+output.. = bin/
+bin.includes = plugin.xml,\
+               META-INF/,\
+               .,\
+               icons/
