--- a/plugin.xml
+++ b/plugin.xml
@@ -9,11 +9,12 @@
             id="org.twinstone.eclipse.projectcompare.commands.category">
       </category>
       <command
-            name="Sample Command"
+            name="Compare with actual counterpart"
             categoryId="org.twinstone.eclipse.projectcompare.commands.category"
             id="org.twinstone.eclipse.projectcompare.commands.sampleCommand">
       </command>
    </extension>
+
    <extension
          point="org.eclipse.ui.handlers">
       <handler
@@ -21,6 +22,7 @@
             class="org.twinstone.eclipse.projectcompare.handlers.SampleHandler">
       </handler>
    </extension>
+
    <extension
          point="org.eclipse.ui.bindings">
       <key
@@ -30,33 +32,23 @@
             schemeId="org.eclipse.ui.defaultAcceleratorConfiguration">
       </key>
    </extension>
-   <extension
-         point="org.eclipse.ui.menus">
-      <menuContribution
-            locationURI="menu:org.eclipse.ui.main.menu?after=additions">
-         <menu
-               label="Sample Menu"
-               mnemonic="M"
-               id="org.twinstone.eclipse.projectcompare.menus.sampleMenu">
-            <command
-                  commandId="org.twinstone.eclipse.projectcompare.commands.sampleCommand"
-                  mnemonic="S"
-                  id="org.twinstone.eclipse.projectcompare.menus.sampleCommand">
-            </command>
-         </menu>
-      </menuContribution>
-      <menuContribution
-            locationURI="toolbar:org.eclipse.ui.main.toolbar?after=additions">
-         <toolbar
-               id="org.twinstone.eclipse.projectcompare.toolbars.sampleToolbar">
-            <command
-                  commandId="org.twinstone.eclipse.projectcompare.commands.sampleCommand"
-                  icon="icons/sample.gif"
-                  tooltip="Say hello world"
-                  id="org.twinstone.eclipse.projectcompare.toolbars.sampleCommand">
-            </command>
-         </toolbar>
-      </menuContribution>
-   </extension>
 
+   <!-- org.eclipse.core.resources.IFile-->
+	<extension point = "org.eclipse.ui.popupMenus">
+	     <objectContribution
+	        id="org.twinstone.eclipse.projectcompare.compareContribution"
+	        adaptable="true"
+	        objectClass="org.eclipse.core.resources.mapping.ResourceMapping">
+		    <action
+            class="org.twinstone.eclipse.projectcompare.handlers.DefaultCounterpartAction"
+            definitionId="org.twinstone.eclipse.projectcompare.commands.sampleCommand"
+       		enablesFor="1"     
+            icon="icons/sample.gif"
+            id="org.twinstone.eclipse.projectcompare.compareCouterpartAction"
+            label="Actual Counterpart"
+            menubarPath="compareWithMenu/compareWithGroup">
+		    </action>
+		 </objectContribution>
+   </extension>
+ 	
 </plugin>
